tests/cases/compiler-development/artifact/errors/diagnostic-c-header-large-aggregate-enum-by-value.diagnostic
diagnostic error code=A0001 family=abi message="C header emission for by-value parameter Packet is limited to direct aggregate ABI values up to 16 bytes and 8-byte alignment; use ptr Packet" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/ffi/errors/c-header-large-aggregate-enum-by-value.ari" display="tests/cases/ffi/errors/c-header-large-aggregate-enum-by-value.ari" bytes=219
  Label index=0 role=primary source_id=0 source="tests/cases/ffi/errors/c-header-large-aggregate-enum-by-value.ari" line=7 column=8 end_line=7 end_column=19 byte_start=84 byte_end=95 message=""
  Snippet label=0 text="  --> tests/cases/ffi/errors/c-header-large-aggregate-enum-by-value.ari:7:8\n   |\n 7 | pub fn take_packet(packet: Packet) -> i64 {\n   |        ^^^^^^^^^^^"
  Note index=0 location=none message="this aggregate exceeds Ari's direct C header aggregate ABI subset. Ari computed this aggregate as 24 bytes with 8-byte alignment."
  Help index=0 location=none message="pass ptr Packet or expose a smaller C wrapper type at the exported ABI boundary"
